--- a/work.html
+++ b/work.html
@@ -147,9 +147,11 @@
                     </div>
                 </div>
                 <div class="work-description-wrapper">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla scelerisque dolor et aliquam
-                        pellentesque. Nulla sed magna congue, vestibulum eros nec, cursus tortor. Sed arcu nisi,
-                        ullamcorper id ipsum sed, vestibulum tempor tortor.
+                    <p>These portraits are my way of expressing my love for colors. I genuinely indulge working with
+                        numerous shades. I’ve chosen to draw portraits to improve my skills at this exercice first, but
+                        ended up enjoying wielding colors to my liking more.
+                        This is only one of the many styles I have elaborated even though I am always keen on
+                        discovering new ones.
                     </p>
                 </div>
             </div>
