--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <meta property="og:description"
         content="Learn more about Sacha Chouvin, a multimedia engineering student from France" />
     <meta property="og:image" content="Lien url de votre image" />
-    <title>Base HTML et CSS | Université du Québec en Abitibi-Témiscamingue</title>
+    <title>Sacha Chouvin | About</title>
     <link rel="icon" href="favicon.jpg" />
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/about.css">
