--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<meta property="og:title" content="Titre de la page" />
 	<meta property="og:description" content="Courte description de la page" />
 	<meta property="og:image" content="Lien url de votre image" />
-	<title>Base HTML et CSS | Université du Québec en Abitibi-Témiscamingue</title>
+	<title>Sacha Chouvin | Portfoilo</title>
 	<link rel="icon" href="favicon.jpg" />
 	<link rel="stylesheet" href="css/global.css">
 	<link rel="stylesheet" href="css/home.css">
