--- a/work.html
+++ b/work.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Library of Sacha CHouvin's work">
+    <meta name="description" content="Library of Sacha Chouvin's work">
     <meta name="keywords" content="work">
     <meta property="og:url" content="https://www.monsiteweb.ca" />
     <meta property="og:type" content="website" />
@@ -13,7 +13,7 @@
     <meta property="og:description"
         content="Learn more about Sacha Chouvin, a multimedia engineering student from France" />
     <meta property="og:image" content="Lien url de votre image" />
-    <title>Base HTML et CSS | Université du Québec en Abitibi-Témiscamingue</title>
+    <title>Sacha Chouvin | Work</title>
     <link rel="icon" href="favicon.jpg" />
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/work.css">
