correction work paragraph

--- a/work.html
+++ b/work.html
@@ -147,7 +147,7 @@
                     </div>
                 </div>
                 <div class="work-description-wrapper">
-                    <p>These portraits are my way of expressing my love for colors. I genuinely indulge working with
+                    <p>These portraits are my way of expressing my love for colors. I genuinely indulge in working with
                         numerous shades. I’ve chosen to draw portraits to improve my skills at this exercice first, but
                         ended up enjoying wielding colors to my liking more.
                         This is only one of the many styles I have elaborated even though I am always keen on
