test meta og image

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<meta property="og:title" content="Sacha Chouvin | Portfolio" />
 	<meta property="og:description"
 		content="Discover the creative works of Sacha Chouvin, an up-and-coming multimedia engineer and concept artist." />
-	<meta property="og:image" content="https://zupimages.net/viewer.php?id=23/17/vork.jpg" />
+	<meta property="og:image" content="https://zupimages.net/viewer.php?id=22/50/9anu.png" />
 	<title>Sacha Chouvin | Portfoilo</title>
 	<link rel="icon" href="favicon.jpg" />
 	<link rel="stylesheet" href="css/style.css">
