SSL certificate error

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 		content="Discover the creative works of Sacha Chouvin, an up-and-coming multimedia engineer and concept artist.">
 	<meta name="keywords" content="portfolio, multimedia student, concept art">
 	<meta name="author" content="Clara Balzano">
-	<meta property="og:url" content="https://www.sachachouvin.github.io" />
+	<meta property="og:url" content="https://sachachouvin.github.io" />
 	<meta property="og:type" content="website" />
 	<meta property="og:title" content="Sacha Chouvin | Portfolio" />
 	<meta property="og:description"
 		content="Discover the creative works of Sacha Chouvin, an up-and-coming multimedia engineer and concept artist." />
-	<meta property="og:image" content="https://zupimages.net/viewer.php?id=22/50/9anu.png" />
+	<meta property="og:image" content="https://zupimages.net/viewer.php?id=23/17/vork.jpg" />
 	<title>Sacha Chouvin | Portfoilo</title>
 	<link rel="icon" href="favicon.jpg" />
 	<link rel="stylesheet" href="css/style.css">
